--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,11 +17,15 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
-    - name: Docker login
+    - name: Docker Login
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASS: ${{ secrets.DOCKER_PASSWORD }}
       run: |
-         echo "Iniciando login"
-         docker login -u $DOCKER_USER -p $DOCKER_PASS
-         echo "Fin del login"
+        docker login -u $DOCKER_USER -p $DOCKER_PASS
+    - name: Build Docker Image
+      run: |
+        docker build -t gfmartinez85/docker-graphql:0.0.2 . 
+    - name: Push Docker Image
+      run: |
+        docker push gfmartinez85/docker-graphql:0.0.2 .
