--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,6 +26,8 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build -t gfmartinez85/docker-graphql:0.0.2 . 
+        docker build -t gfmartinez85/docker-graphql:latest . 
     - name: Push Docker Image
       run: |
         docker push gfmartinez85/docker-graphql:0.0.2
+        docker push gfmartinez85/docker-graphql:latest
