--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,17 +29,18 @@ jobs:
     - name: Docker Login
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
-        DOCKER_PASS: ${{ secrets.DOCKER_PASSWORD }}
-        NEW_VERSION: ${{ steps.version.outputs.version }}
+        DOCKER_PASS: ${{ secrets.DOCKER_PASSWORD }}        
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASS
-        echo "New version: $NEW_VERSION!!!!!"
-    
-    # - name: Build Docker Image
-    #   run: |
-    #     docker build -t gfmartinez85/docker-graphql:0.0.2 . 
-    #     docker build -t gfmartinez85/docker-graphql:latest . 
-    # - name: Push Docker Image
-    #   run: |
-    #     docker push gfmartinez85/docker-graphql:0.0.2
-    #     docker push gfmartinez85/docker-graphql:latest
+    - name: Build Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker build -t gfmartinez85/docker-graphql:$NEW_VERSION . 
+        docker build -t gfmartinez85/docker-graphql:latest . 
+    - name: Push Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker push gfmartinez85/docker-graphql:$NEW_VERSION
+        docker push gfmartinez85/docker-graphql:latest
